--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -390,4 +390,166 @@ main {
       }
     }
   }
+  .work {
+    p {
+      color: variables.$orange;
+      font-size: 1.5em;
+      font-weight: 600;
+      text-align: center;
+    }
+    .workContent {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      padding: 5em 0 0 0;
+      h2 {
+        font-size: 3em;
+        color: variables.$golden;
+        font-weight: 400;
+        line-height: 1.2em;
+        margin-top: 0.7em;
+        margin-bottom: 1em;
+      }
+      h3 {
+        font-size: 3em;
+        color: variables.$darkgrey;
+        font-weight: 400;
+        line-height: 1.2em;
+        margin-top: 1em;
+      }
+      ul {
+        text-align: center;
+        li {
+          grid-template-columns: 1fr 1fr;
+          @include mixins.flex-center;
+          gap: 0.5em;
+          padding-bottom: 0.5em;
+        }
+        li:nth-child(2),
+        li:nth-child(3) {
+          // grid-template-columns: 1fr 1fr 1fr;
+          @include mixins.flex-center;
+          padding: 0 6em;
+        }
+        li:nth-child(3) {
+          padding: 0 12em;
+        }
+        li:last-child {
+          padding: 0 21em;
+        }
+        p {
+          font-size: 1.2em !important;
+          color: variables.$black;
+          font-weight: 400;
+        }
+      }
+    }
+  }
+  .btm {
+    padding: 0em 0 3em 0;
+    border-bottom: 1px solid variables.$lightgrey;
+  }
+  //CONTACT
+  .contact {
+    text-align: center;
+    padding-top: 5em;
+    span {
+      color: variables.$orange;
+      font-size: 1.5em !important;
+      font-weight: 600;
+    }
+    h2 {
+      font-size: 3em;
+      // white-space: pre-line;
+      color: variables.$voilet;
+      font-weight: 600;
+      line-height: 1.2em;
+      margin-top: 0.7em;
+      text-align: center;
+    }
+    .form {
+      border: 2px solid variables.$darkgrey;
+      border-radius: 2em;
+      @include mixins.grid-center;
+      align-items: stretch;
+      grid-template-columns: minmax(200px, 500px) 1fr;
+      article {
+        background: url(/assets/img/contact.png);
+        @include mixins.bg-center-cover-no-repeat;
+        border-top-left-radius: 2em;
+        border-bottom-left-radius: 2em;
+        padding: 4em 5em;
+        h4 {
+          font-size: 2em;
+          color: variables.$white;
+          font-weight: 400;
+        }
+        a {
+          color: variables.$white;
+          @include mixins.flex-center;
+          gap: 1em;
+        }
+      }
+      .inner {
+        padding: 3em;
+        text-align: left;
+        p {
+          text-align: left;
+          color: variables.$darkgrey;
+          margin-bottom: 2em;
+        }
+        .form-section {
+          margin-bottom: 20px;
+          @include mixins.flex-space-bw;
+        }
+        .form-section h3 {
+          color: #888;
+        }
+        .button-group {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 10px;
+        }
+        .btn {
+          padding: 10px 20px;
+          border: 1px solid #ccc;
+          border-radius: 5px;
+          background: white;
+          cursor: pointer;
+        }
+        .btn.selected {
+          border-color: #00a0c6;
+          color: #00a0c6;
+        }
+        .input-group {
+          display: flex;
+          gap: 20px;
+          margin-bottom: 10px;
+        }
+        input[type="text"],
+        input[type="email"],
+        textarea {
+          width: 100%;
+          padding: 10px;
+          border: 1px solid #ccc;
+          border-radius: 5px;
+        }
+        .send-btn {
+          background: #2ba5b6;
+          color: white;
+          border: none;
+          padding: 12px 30px;
+          border-radius: 8px;
+          cursor: pointer;
+        }
+        input[type="radio"] {
+          margin-right: 8px;
+        }
+        label.radio-label {
+          display: flex;
+          align-items: center;
+          margin-right: 15px;
+        }
+      }
+    }
+  }
 }
