pixelable pricing table

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -7,5 +7,12 @@ $lightgrey: #cacaca;
 $darkgrey: #a5a5a5;
 $golden: #edaa29;
 $grey: #fafafa;
-$orange2:#db6f21;
-$lightgrey2:#fafafa;
+$orange2: #db6f21;
+$lightgrey2: #fafafa;
+
+$color-primary: #f44336;
+$color-diamond: #0097a7;
+$color-gold: #fbc02d;
+$color-background: #f5f5f5;
+$color-white: #ffffff;
+$color-font: #333;
