--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -364,11 +364,14 @@ main {
     background-color: variables.$lightgrey2;
     margin-top: 10em;
     margin-bottom: 2em;
+    padding: 5em 0;
   }
   .pricing {
     .imgContent {
       @include mixins.flex-center;
       margin-bottom: 4em;
+      padding: 0em 0 3em 0;
+      border-bottom: 1px solid variables.$lightgrey;
       span {
         color: variables.$orange;
         font-size: 1.5em;
@@ -382,14 +385,257 @@ main {
         margin-top: 0.7em;
       }
       p {
-        font-size: 0.9em;
+        font-size: 1.5em;
         color: variables.$darkgrey;
         font-weight: 400;
         line-height: 1.5em;
         margin-top: 1em;
       }
     }
+    //Pricing Table
+    .pricingTable {
+      text-align: center;
+      p {
+        font-size: 1.2em;
+        font-weight: 300;
+        line-height: 1.5em;
+      }
+
+      .pricing-container {
+        @include mixins.flex-center;
+        margin: 3em 0;
+        .plan {
+          background: variables.$white;
+          border-radius: 10px;
+          padding: 1.5rem;
+          width: 375px;
+          text-align: center;
+          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+          position: relative;
+          // overflow: hidden;
+          z-index: 1;
+
+          .firstSec {
+            @include mixins.flex-space-bw;
+            align-items: start;
+            text-align: left;
+            padding: 0 1em;
+            h2 {
+              margin: 0;
+              font-size: 1.5rem;
+            }
+
+            .description {
+              font-size: 1em;
+              color: variables.$darkgrey;
+              margin-bottom: 1rem;
+              font-weight: 400;
+            }
+          }
+
+          .price {
+            position: relative;
+            border-style: solid;
+            border-width: 2px;
+            border-radius: 6px;
+            box-shadow: 1.359px 12.929px 9px 0px rgba(90, 90, 90, 0.19);
+            width: 405px;
+            height: 104px;
+            z-index: 189;
+            left: -38px;
+            display: flex;
+            &::before {
+              content: "";
+              position: absolute;
+              width: 0;
+              height: 0;
+              border-left: 12px solid transparent;
+              border-right: 2px solid transparent;
+              border-bottom: 10px solid #575454;
+              left: -1px;
+              top: -10px;
+            }
+
+            &::after {
+              content: "";
+              position: absolute;
+              width: 0;
+              height: 0;
+              border-left: 0px solid transparent;
+              border-right: 12px solid transparent;
+              border-bottom: 10px solid #575454;
+              right: 2px;
+              top: -10px;
+            }
+            p {
+             
+              @include mixins.flex-center;
+              margin: 0 auto;
+              width: 98%;
+              gap: 1em;
+              .currency {
+                font-size: 1.2rem;
+                vertical-align: super;
+                color: variables.$white;
+              }
+              .amount {
+                color: variables.$white !important;
+                font-size: 2em;
+                font-weight: bold;
+              }
+              .unit {
+                font-size: 1rem;
+                margin-left: 0.25rem;
+                color: variables.$white;
+              }
+            }
+          }
+
+          .features {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+            margin: 1.5em 0;
+
+            li {
+              margin: 0 0 2rem 0;
+              &:before {
+                content: "\2713";
+                color: variables.$voilet;
+                margin-right: 0.5rem;
+                font-weight: bold;
+              }
+            }
+          }
+
+          .selectPlan {
+            border-top: 1px solid variables.$darkgrey;
+
+            button {
+              margin-top: 1em;
+              padding: 1rem 1rem;
+              border-radius: 0.8em;
+              font-weight: bold;
+              cursor: pointer;
+              transition: 0.3s;
+              width: 100%;
+              font-size: 1.2em;
+              background-color: transparent;
+              border: 1px solid transparent;
+              // &:hover {
+              //   background-color: currentColor;
+              // }
+            }
+          }
+        }
+      }
+
+      .silver {
+        h2 {
+          color: variables.$orange;
+        }
+        .price {
+          color: variables.$white;
+          background-color: variables.$orange;
+          border-color: #9f1c0b !important;
+          p{
+            border-top: 2px solid #ffcec8;
+          }
+        }
+      
+        .selectPlan {
+          button {
+            border-color: variables.$orange !important;
+            color: variables.$orange;
+          }
+        }
+      }
+
+      .diamond {
+        background-color: #f6fcff !important;
+        transform: scale(1.05);
+        z-index: 2 !important;
+        .firstSec {
+          h2 {
+            color: variables.$voilet;
+          }
+        }
+        .price {
+          color: variables.$white;
+          background-color: variables.$voilet;
+          border-color: #1d7e90 !important;
+          p{
+            border-top: 2px solid #c3f6ff;
+          }
+        }
+
+        .selectPlan {
+          button {
+            border-color: variables.$voilet !important;
+            color: variables.$voilet;
+            background-color: #fefbf4;
+          }
+        }
+
+        .mostPopular {
+          margin-bottom: 3em;
+          a {
+            background: #2e2f77;
+            color: white;
+            padding: 0.5em 1.2em;
+            border-radius: 20px;
+            font-size: 1.1rem;
+            font-weight: 300;
+            box-shadow: 0 10px 10px #d3d7da;
+          }
+        }
+      }
+
+      .gold {
+        .firstSec {
+          h2 {
+            color: variables.$golden;
+          }
+        }
+        .price {
+          background-color: variables.$golden !important;
+          border-color: #bf9139 !important;
+          p{
+            border-top: 2px solid #f9eacb;
+          }
+        }
+
+        .selectPlan {
+          button {
+            border-color: variables.$golden !important;
+            color: variables.$golden;
+          }
+        }
+      }
+
+      .customPlanNote {
+        p {
+          padding: 0.5em 1.2em;
+          border: 1px solid variables.$golden;
+          border-radius: 1em;
+          background-color: #f9f6ef;
+          width: 910px;
+          margin: 0 auto;
+          @include mixins.flex-center;
+          gap: 1em;
+          a {
+            background-color: #eff1ec;
+            color: variables.$voilet;
+            border: 1px solid variables.$voilet;
+            border-radius: 0.5em;
+            padding: 0.5em 0.7em;
+            font-weight: 600;
+          }
+        }
+      }
+    }
   }
+  //WORK
   .work {
     p {
       color: variables.$orange;
