--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -747,7 +747,8 @@ main {
         }
         .form-section {
           margin-bottom: 20px;
-          @include mixins.flex-space-bw;
+          @include mixins.grid-center;
+          grid-template-columns: minmax(250px, auto) 1fr;
         }
         .form-section h3 {
           color: #888;
