--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -713,6 +713,7 @@ main {
       line-height: 1.2em;
       margin-top: 0.7em;
       text-align: center;
+      margin-bottom: 2em;
     }
     .form {
       border: 2px solid variables.$darkgrey;
@@ -873,19 +874,19 @@ main {
         }
 
         .send-btn {
-          background-color: #2aacb9;
+          background-color: variables.$voilet;
           color: white;
           border: none;
-          border-radius: 5px;
-          padding: 12px 0;
-          width: 125px;
-          font-size: 15px;
+          border-radius: 0.7em;
+          padding: 0.8em 1em;
+          width: 200px;
+          font-size: 1.2em;
           cursor: pointer;
           margin-top: 10px;
         }
 
         .send-btn:hover {
-          background-color: #239aa7;
+          background-color: variables.$orange;
         }
       }
     }
