--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,14 +1,33 @@
 @use "../abstracts/mixins";
 @use "../abstracts/variables";
-body.home {
-  background: #fafafa;
-}
+
 main {
   //****HERO SECTION****//
   .heroBanner {
     background-image: url("../assets/img/hero-banner.png");
     @include mixins.bg-center-cover-no-repeat;
-
+    position: relative;
+    .objects {
+      img {
+        position: absolute;
+      }
+      img:first-child {
+        top: 10%;
+        left: -18%;
+      }
+      img:nth-child(2) {
+        bottom: 0;
+        left: 250px;
+      }
+      img:nth-child(3) {
+        bottom: 0;
+        right: 0;
+      }
+      img:nth-child(4) {
+        top: 300px;
+        right: 100px;
+      }
+    }
     .heroBannerContent {
       @include mixins.flex-center;
       flex-direction: column;
@@ -716,8 +735,6 @@ main {
       margin-bottom: 2em;
     }
     .form {
-      border: 2px solid variables.$darkgrey;
-      border-radius: 2em;
       @include mixins.grid-stretch;
       grid-template-columns: minmax(200px, 500px) 1fr;
       article {
@@ -743,150 +760,115 @@ main {
         display: flex;
         flex-direction: column;
         gap: 2em;
+        border: 2px solid variables.$lightgrey;
+        border-top-right-radius: 2em;
+        border-bottom-right-radius: 2em;
+        border-left: 0;
         p {
           text-align: left;
           color: variables.$darkgrey;
         }
         .form-container {
-          // background-color: white;
-          // width: 100%;
-          // max-width: 700px;
-          // border-radius: 10px;
-          // padding: 35px;
-          // box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-        }
+          .form-section {
+            margin-bottom: 20px;
+            display: grid;
+            grid-template-columns: minmax(auto, 15%) minmax(auto, 85%);
+            align-items: center;
+            .form-section-label {
+              font-size: 14px;
+              color: #666;
+              margin-bottom: 10px;
+            }
+            .option-group {
+              display: flex;
+              gap: 8px;
+              .option-btn {
+                flex: 1;
+                padding: 10px;
+                border: 1px solid #ddd;
+                border-radius: 5px;
+                background: white;
+                font-size: 14px;
+                color: #333;
+                cursor: pointer;
+                text-align: center;
+                &.selected {
+                  border-color: #2aacb9;
+                  color: #2aacb9;
+                }
+              }
+            }
+          }
+          .basic-info {
+            margin-top: 30px;
+            margin-bottom: 20px;
+            .basic-info-header {
+              @include mixins.flex-center;
+              justify-content: start;
+              margin-bottom: 25px;
+              color: #888;
+              font-size: 14px;
+              svg {
+                margin-right: 8px;
+              }
+            }
+          }
+          .input-group {
+            flex: 1;
+            position: relative;
+            margin-bottom: 35px;
+            display: grid;
+            grid-template-columns: minmax(auto, 15%) minmax(auto, 85%);
+            align-items: center;
+            input,
+            textarea {
+              width: 100%;
+              border: none;
+              border-bottom: 1px solid #ddd;
+              padding: 5px 0;
+              font-size: 14px;
+              outline: none;
+              background: transparent;
+              &:focus {
+                border-bottom-color: variables.$voilet;
+              }
+            }
+            label {
+              display: block;
+              color: #666;
+              font-size: 14px;
+            }
+          }
 
-        .form-header {
-          margin-bottom: 30px;
-          color: #333;
-          font-size: 16px;
-          font-weight: 400;
-        }
-
-        .filters {
-          display: flex;
-          align-items: center;
-          margin-bottom: 25px;
-          color: #888;
-          font-size: 14px;
-        }
-
-        .filters svg {
-          margin-right: 8px;
-        }
-
-        .form-section {
-          margin-bottom: 20px;
-          display: grid;
-          grid-template-columns: minmax(auto, 15%) minmax(auto, 85%);
-          align-items: center;
-        }
-
-        .form-section-label {
-          font-size: 14px;
-          color: #666;
-          margin-bottom: 10px;
-        }
-
-        .option-group {
-          display: flex;
-          gap: 8px;
-        }
-
-        .option-btn {
-          flex: 1;
-          padding: 10px;
-          border: 1px solid #ddd;
-          border-radius: 5px;
-          background: white;
-          font-size: 14px;
-          color: #333;
-          cursor: pointer;
-          text-align: center;
-        }
-
-        .option-btn.selected {
-          border-color: #2aacb9;
-          color: #2aacb9;
-        }
-
-        .basic-info {
-          margin-top: 30px;
-          margin-bottom: 20px;
-        }
-
-        .basic-info-header {
-          @include mixins.flex-center;
-          justify-content: start;
-          margin-bottom: 25px;
-          color: #888;
-          font-size: 14px;
-        }
-
-        .basic-info-header svg {
-          margin-right: 8px;
+          .send-btn {
+            background-color: variables.$voilet;
+            color: variables.$white;
+            border: none;
+            border-radius: 0.7em;
+            padding: 0.8em 1em;
+            width: 200px;
+            font-size: 1.2em;
+            cursor: pointer;
+            margin-top: 10px;
+            &:hover {
+              background-color: variables.$orange;
+            }
+          }
         }
 
         .input-row {
           display: flex;
           gap: 15px;
           margin-bottom: 20px;
-        }
-
-        .input-group:first-child,
-        .input-group:nth-child(2) {
-          flex: 1;
-          position: relative;
-          margin-bottom: 15px;
-          display: grid;
-          grid-template-columns: minmax(auto, 31%) minmax(auto, 68%);
-          align-items: center;
-        }
-        .input-group {
-          flex: 1;
-          position: relative;
-          margin-bottom: 35px;
-          display: grid;
-          grid-template-columns: minmax(auto, 15%) minmax(auto, 85%);
-          align-items: center;
-        }
-
-        .input-group label {
-          display: block;
-          color: #666;
-          font-size: 14px;
-        }
-
-        .input-group input,
-        .input-group textarea {
-          width: 100%;
-          border: none;
-          border-bottom: 1px solid #ddd;
-          padding: 5px 0;
-          font-size: 14px;
-          outline: none;
-          background: transparent;
-        }
-
-        .input-group input:focus,
-        .input-group textarea:focus {
-          border-bottom-color: #2aacb9;
-        }
-
-        .send-btn {
-          background-color: variables.$voilet;
-          color: white;
-          border: none;
-          border-radius: 0.7em;
-          padding: 0.8em 1em;
-          width: 200px;
-          font-size: 1.2em;
-          cursor: pointer;
-          margin-top: 10px;
-        }
-
-        .send-btn:hover {
-          background-color: variables.$orange;
+          .input-group:first-child,
+          .input-group:nth-child(2) {
+            flex: 1;
+            position: relative;
+            margin-bottom: 15px;
+            display: grid;
+            grid-template-columns: minmax(auto, 31%) minmax(auto, 68%);
+            align-items: center;
+          }
         }
       }
     }
