--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -3,12 +3,42 @@
 
 .heroBanner {
   header {
+    position: relative;
     padding: 3rem 1em 2em 1em;
     @include mixins.flex-space-bw;
     width: 100%;
+    z-index: 1000;
+
     .hamburger {
       display: none;
+      background: none;
+      border: none;
+      font-size: 2rem;
+      cursor: pointer;
+      z-index: 1100;
+      position: relative;
+
+      &.open::before {
+        content: "×";
+        font-size: 2.5rem;
+      }
     }
+
+    .mobileMenu {
+      display: flex;
+      ul {
+        list-style: none;
+        display: flex;
+        gap: 2rem;
+
+        li a {
+          text-decoration: none;
+          color: variables.$white;
+          font-size: 1.2em;
+        }
+      }
+    }
+
     .mobileRight {
       a {
         color: variables.$orange;
@@ -20,14 +50,53 @@
       }
     }
   }
-}
-//MEIDA QUERY
 
-@media (max-width: 768px) {
-  .heroBanner {
+  @media (max-width: 768px) {
     header {
       .hamburger {
         display: block;
+      }
+
+      .mobileMenu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100%;
+        background-color: variables.$white;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        padding: 2rem;
+        transform: translateX(-100%);
+        transition: transform 0.4s ease-in-out;
+        z-index: 1000;
+        visibility: hidden;
+        opacity: 0;
+
+        ul {
+          flex-direction: column;
+          gap: 1.5rem;
+
+          li a {
+            color: variables.$black;
+            font-size: 1.5rem;
+          }
+        }
+
+        &.open {
+          transform: translateX(0);
+          visibility: visible;
+          opacity: 1;
+        }
+      }
+
+      .mobileRight {
+        display: none;
+      }
+
+      body.menu-open {
+        overflow: hidden;
       }
     }
   }
