--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -897,6 +897,9 @@ main {
     display: none;
   }
   @media (max-width: 768px) {
+    img {
+      width: 100%;
+    }
     .heroBanner {
       .objects {
         img:nth-child(2) {
@@ -923,6 +926,16 @@ main {
     .work {
       .workContent {
         grid-template-columns: 1fr;
+        div:first-child{
+          img{
+            width: 200px;
+          }
+        }
+        .portfolio {
+          img{
+            width: auto;
+          }
+        }
       }
     }
     .aboutUs2 {
@@ -952,6 +965,13 @@ main {
       gap: 1rem;
       padding: 0; /* ✅ remove padding here */
       scroll-padding-left: 10rem; /* ✅ ensure scroll starts from first item */
+      div{
+        span{
+          img{
+            width: auto;
+          }
+        }
+      }
     }
 
     .serviceList > div {
@@ -1009,6 +1029,19 @@ main {
       .imgContent {
         flex-direction: column;
       }
+      .pricingTable {
+        .customPlanNote {
+          p {
+            flex-direction: column;
+            width: 100%;
+          }
+        }
+      }
+      .firstSec{
+        img{
+          width: auto;
+        }
+      }
     }
     .contact {
       .form {
@@ -1029,6 +1062,11 @@ main {
               .option-group {
                 flex-direction: column;
               }
+            }
+          }
+          p{
+            img{
+              width: auto;
             }
           }
         }
