--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -926,13 +926,21 @@ main {
     .work {
       .workContent {
         grid-template-columns: 1fr;
-        div:first-child{
-          img{
+        div:first-child {
+          img {
             width: 200px;
           }
         }
         .portfolio {
-          img{
+          ul {
+            li {
+              padding: 0.5em !important;
+              img {
+                width: 100px;
+              }
+            }
+          }
+          .lamp {
             width: auto;
           }
         }
@@ -965,9 +973,9 @@ main {
       gap: 1rem;
       padding: 0; /* ✅ remove padding here */
       scroll-padding-left: 10rem; /* ✅ ensure scroll starts from first item */
-      div{
-        span{
-          img{
+      div {
+        span {
+          img {
             width: auto;
           }
         }
@@ -1037,8 +1045,8 @@ main {
           }
         }
       }
-      .firstSec{
-        img{
+      .firstSec {
+        img {
           width: auto;
         }
       }
@@ -1064,8 +1072,8 @@ main {
               }
             }
           }
-          p{
-            img{
+          p {
+            img {
               width: auto;
             }
           }
