--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -278,7 +278,7 @@ main {
             border-radius: 50%;
             position: absolute;
             left: 0;
-            top: 15px;
+            top: 25px;
             border: 2px solid variables.$white;
           }
           /* Different bullet colors */
@@ -334,10 +334,11 @@ main {
         margin-top: -2em;
       }
     }
-    .serviceList {
+    .serviceList,
+    .serviceListMob {
       @include mixins.flex-center;
       gap: 1em;
-      div {
+      .item {
         border: 1px solid variables.$lightgrey;
         border-radius: 2em;
         padding: 2em 2em;
@@ -356,7 +357,7 @@ main {
           margin: 0.8em 0 0.5em;
         }
       }
-      div:nth-child(2) {
+      .item:nth-child(2) {
         span {
           background-color: variables.$orange2;
         }
@@ -364,7 +365,7 @@ main {
           color: variables.$orange2;
         }
       }
-      div:nth-child(3) {
+      .item:nth-child(3) {
         span {
           background-color: variables.$voilet;
         }
@@ -372,7 +373,7 @@ main {
           color: variables.$voilet;
         }
       }
-      div:nth-child(4) {
+      .item:nth-child(4) {
         span {
           background-color: variables.$golden;
         }
@@ -873,6 +874,11 @@ main {
               background-color: variables.$orange;
             }
           }
+
+          /* Hide mobile dropdown by default */
+          .option-dropdown {
+            display: none;
+          }
         }
 
         .input-row {
@@ -893,9 +899,34 @@ main {
     }
   }
   .slider,
-  .mobilePlanSelector {
-    display: none;
+  .mobilePlanSelector,
+  .serviceListMob {
+    display: none !important;
   }
+
+  .serviceListMob ul.slick-dots {
+    display: flex;
+    gap: 1rem;
+    position: absolute;
+    top: 110%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .serviceListMob ul.slick-dots button {
+    border-radius: 100%;
+    width: 10px;
+    height: 10px;
+    font-size: 0;
+    background-color: #d6d6d6;
+    border: 0;
+  }
+
+  .serviceListMob ul.slick-dots .slick-active button {
+    background-color: variables.$voilet !important;
+  }
+
   @media (max-width: 768px) {
     img {
       width: 100%;
@@ -907,7 +938,7 @@ main {
           left: -380px;
         }
         img:nth-child(3) {
-          right: -100px;
+          right: 0;
         }
         .object4 {
           display: none;
@@ -926,6 +957,8 @@ main {
     .work {
       .workContent {
         grid-template-columns: 1fr;
+        gap: 2rem;
+        text-align: center;
         div:first-child {
           img {
             width: 200px;
@@ -962,17 +995,19 @@ main {
     .ourServices {
       .ourServicesContent {
         flex-direction: column;
+        text-align: center;
       }
     }
 
     .serviceList {
-      overflow-x: auto;
-      scroll-snap-type: x mandatory;
-      display: flex;
-      flex-wrap: nowrap;
-      gap: 1rem;
-      padding: 0; /* ✅ remove padding here */
-      scroll-padding-left: 10rem; /* ✅ ensure scroll starts from first item */
+      display: none !important;
+      // overflow-x: auto;
+      // scroll-snap-type: x mandatory;
+      // display: flex;
+      // flex-wrap: nowrap;
+      // gap: 1rem;
+      // padding: 0; /* ✅ remove padding here */
+      // scroll-padding-left: 10rem; /* ✅ ensure scroll starts from first item */
       div {
         span {
           img {
@@ -982,15 +1017,11 @@ main {
       }
     }
 
-    .serviceList > div {
-      flex: 0 0 90%; /* makes each slide take 90% of screen */
-      min-width: 90%;
-      scroll-snap-align: start;
-      box-sizing: border-box;
-      background: #fff;
-      padding: 1rem;
-      border-radius: 10px;
-      margin-left: 1rem;
+    .serviceListMob {
+      display: block !important;
+      img {
+        width: auto;
+      }
     }
     main .serviceList > div:last-child {
       margin-right: 1rem; /* ✅ spacing at end */
@@ -1054,7 +1085,14 @@ main {
     .contact {
       .form {
         grid-template-columns: 1fr;
+        gap: 2rem;
+        article {
+          order: 2;
+          border-radius: 2rem;
+        }
         .inner {
+          border-radius: 2rem;
+          border-left: 2px solid #cacaca;
           .input-row {
             flex-direction: column;
             .input-group {
@@ -1069,6 +1107,27 @@ main {
               grid-template-columns: 1fr;
               .option-group {
                 flex-direction: column;
+              }
+            }
+            #select-services,
+            #plan-budget,
+            #selected-plan {
+              display: none !important;
+            }
+            .option-dropdown {
+              display: block;
+              select {
+                border-radius: 10px;
+                padding: 1rem 2rem;
+                width: 100%;
+                -moz-appearance: none; /* Firefox */
+                -webkit-appearance: none; /* Safari and Chrome */
+                appearance: none;
+                background: transparent;
+                background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+                background-repeat: no-repeat;
+                background-position-x: 93%;
+                background-position-y: 11px;
               }
             }
           }
